--- a/games/1v1lol.html
+++ b/games/1v1lol.html
@@ -11,10 +11,6 @@
 
 <body>
 
-    <style>
-        iframe {width: 100vw; height: 100vh; overflow: hidden;}
-    </style>
-
-    <iframe src="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/mind4ur/debugactions@57aba9c568b75b8aaddbcad0a05f8c26f57b344b/package/1v1old.xml" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/mind4ur/debugactions@57aba9c568b75b8aaddbcad0a05f8c26f57b344b/package/1v1old.xml" frameborder="0" scrolling="no" style="width: 100vw; height: 100vh; overflow: hidden; overflow-y: hidden; overflow-x: hidden; border-width: 0px;"></iframe>
 </body>
 </html>
